--- a/index.html
+++ b/index.html
@@ -6,24 +6,47 @@
 
 		<meta name="description" content="Webpage">
 		<link href="stylesheet.css" rel="stylesheet">
-
+		<link href="bootstrap.css" rel="stylesheet">
 		<script src="jquery.min.js"></script>
 		<script src="script.js"></script>
 	</head>
 	
 	<body>
-		<h1>Fruit Market</h1>
-		<div id="container">
-			<div class="btn" id="apples"><img src="images/apple.png"></div>
-			<button class="sell" id="sellapples">Sell an Apple</button>
-			<div class="btn" id="oranges"><img src="images/orange.png"></div>
-			<button class="sell" id="selloranges">Sell an Orange</button>
-			<div class="btn" id="bananas"><img src="images/bananas.png"></div>
-			<button class="sell" id="sellbananas">Sell a Banana</button>
-			<div class="btn" id="pears"><img src="images/pear.png"></div>
-			<button class="sell" id="sellpears">Sell a pear</button>
+		<h1 class=" mytitle text-center">Fruit Market</h1>
+		<div class="market container well">
+			
+			<div class="col-md-3">
+				<div class="btn fruitimg" id="apples">
+					<img src="images/apple.png">
+				</div>
+				<button class="sell btn btn-danger disabled" id="sellapples">Sell an Apple</button>
+			</div>
+
+			<div class="col-md-3">
+			<div class="btn" id="oranges">
+				<img src="images/orange.png">
+			</div>
+			<button class="sell btn btn-danger disabled" id="selloranges">Sell an Orange</button>
+			</div>
+
+			<div class="col-md-3">
+			<div class="btn" id="bananas">
+				<img src="images/bananas.png">
+			</div>
+			<button class="sell btn btn-danger disabled" id="sellbananas">Sell a Banana</button>
+			</div>
+
+			<div class="col-md-3">
+			<div class="btn" id="pears">
+				<img src="images/pear.png">
+			</div>
+			<button class="sell btn btn-danger disabled" id="sellpears">Sell a pear</button>
+			</div>
+
 		</div>
-		<div id="userInfo"></div>
+		
+
+		<div class="container well" id="userInfo"></div>
 
 	</body>
 </html>
